Closed
Bug 187351
(RefreshExecuted)
Opened 22 years ago
Closed 22 years ago
"refresh tag" in header of page executed by Composer
Categories
(SeaMonkey :: Composer, defect)
Tracking
(Not tracked)
VERIFIED
FIXED
mozilla1.3beta
People
(Reporter: RainerBielefeldNG, Assigned: Brade)
Details
(4 keywords)
Attachments
(4 files)
6.49 KB,
text/html
|
Details | |
1.07 KB,
text/css
|
Details | |
652 bytes,
text/html
|
Details | |
3.12 KB,
patch
|
sfraser_bugs
:
review+
kinmoz
:
superreview+
|
Details | Diff | Splinter Review |
Mozilla/5.0 (Windows; U; Win98; de-AT; rv:1.3b) Gecko/20030101
Steps to reproduce
1. install attatched stylesheet on yor PC
2. install attatched test_umleitung.html on your PC
3. Open test_umleitung.html in compoer
4. Save as test_umleitung1.html
5. Wait for app. 20s
expected: you can continue work on page
actual: mousepointer shows "busy", page can not be worked, after some
time edtor-composer will load page with icebear-picture
Problem does not happen with older builds (I tested only 1 RC for 1.0
sorry, it will still take 1 hour to send atts!
Reporter | ||
Comment 1•22 years ago
|
||
With this html-file yo can reproduce the problem
Reporter | ||
Comment 2•22 years ago
|
||
Might be required for reproduction
Reporter | ||
Comment 3•22 years ago
|
||
I reduced the contents of the first page to find out if there is any other
influence than "refresh".
The problem still happens with this page.
I also tried to create a new file in the composer and only added the line with
the refresh-function. That page worked normally without the described bug.
Reporter | ||
Comment 4•22 years ago
|
||
No Problems with
Mozilla/5.0 (Windows; U; Win98; de-AT; rv:1.2a) Gecko/20020913
It seems that the Problem started more or less with 1.3a ?
Reporter | ||
Comment 7•22 years ago
|
||
To make things some more clearly, I changed the summary from
"Hangs after 'save as' if source contains refresh-tag"
Steps tor reproduce:
1. open http://home.t-online.de/home/martina-buss/abi76.html
2. Select "File/EditPage" to edit the Page in the composer
3. Wait
expected: nothing happens
actual: redirection to http://www.8ung.at/bielefeld/martina-buss/abi76.html
This happens with all my 1.3 - builds
Alias: RefreshExecuted
Summary: Hangs after 'save as' if source contains refresh-tag → "refresh tag" in header of page executed by Composer
Reporter | ||
Comment 8•22 years ago
|
||
problem still in
Mozilla/5.0 (Windows; U; Win98; de-AT; rv:1.3b) Gecko/20030111
Reporter | ||
Comment 9•22 years ago
|
||
Hey, nobody interested here?
Assignee | ||
Comment 10•22 years ago
|
||
I am interested but I have topcrash and other bugs that demand my time first. I
will get to this issue... :-)
Keywords: helpwanted,
topembed
Assignee | ||
Comment 11•22 years ago
|
||
Assignee | ||
Updated•22 years ago
|
Attachment #112188 -
Flags: review?(sfraser)
Assignee | ||
Updated•22 years ago
|
Target Milestone: --- → mozilla1.3beta
Updated•22 years ago
|
Attachment #112188 -
Flags: review?(sfraser) → review+
Assignee | ||
Updated•22 years ago
|
Attachment #112188 -
Flags: superreview?(kin)
Comment 12•22 years ago
|
||
Comment on attachment 112188 [details] [diff] [review]
tell docshell to cancel any scheduled refreshes
sr=kin@netscape.com
Do we need to check the result or domWindow value of:
+ aWebProgress->GetDOMWindow(getter_AddRefs(domWindow));
Or are we relying on GetDocShellFromWindow() to fail if |domWindow| is null?
Attachment #112188 -
Flags: superreview?(kin) → superreview+
Assignee | ||
Comment 13•22 years ago
|
||
fix checked in
Comment 14•22 years ago
|
||
Verified in the 2003-05-09-08 Macho trunk build
Status: RESOLVED → VERIFIED
Updated•20 years ago
|
Product: Browser → Seamonkey
You need to log in
before you can comment on or make changes to this bug.
Description
•