fix bug 187351 by cancelling docshell refresh timers; fix bug 182290 by changing destruction order and cleaning up error checking (don't let some failures stop destruction sequence); r=sfraser, sr=kin